--- a/server/src/templates/chart.ejs
+++ b/server/src/templates/chart.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<title>Studio Chocolate Hybrid Gifting</title>
-	<link rel="stylesheet" href="css/chocolate.css">
-	<link rel="icon" type="image/webp" href="images/choclogo.webp"/>
-	<script src="js/plotly.min.js"/>
+	<link rel="stylesheet" href="../css/chocolate.css">
+	<link rel="icon" type="image/webp" href="../images/choclogo.webp"/>
+	<script src="../js/plotly.min.js"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<img src="images/choclogo.webp" class="logo" alt="Studio Chocolate Logo">
+<img src="../images/choclogo.webp" class="logo" alt="Studio Chocolate Logo">
 
 <div id="plot"></div>
 
