--- a/server/src/templates/chart.ejs
+++ b/server/src/templates/chart.ejs
@@ -8,9 +8,7 @@
 	<script src="../js/plotly.min.js"></script>
 </head>
 <body>
-<img src="../images/choclogo.webp" class="logo" alt="Studio Chocolate Logo">
-
-<div id="plot"></div>
+<div id="plot" style="width: 100%; height: 600px"></div>
 
 <script>
 	const data = <%- JSON.stringify(data) %>;
